syntax = "proto3";

option go_package = "./;nfs";

package pmg;

service Ganesha {
  // config sync
  rpc ReadLocalConfig (ReadLocalConfigRequest) returns (stream ReadLocalConfigRes);
  rpc SaveConfigToLocal (stream SaveConfigToLocalRequest) returns (BaseReply);
}

message ReadLocalConfigRequest {
}

message ReadLocalConfigRes {
  string data = 1 ;
  string result = 2;
  string errDescription = 3;
}

message SaveConfigToLocalRequest {
  string data = 1;
}

message BaseReply {
  string result = 1;
  string errDescription = 2;
}
